@@ -97,3 +97,4 @@
 #2020.05.19
 -More UI & Player ammo & Pickupable objects
 -More advanced Dumm AI & Misc
+-Make AStar more reasonable
